openshift/deploy-qsc-openshift-router-loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qsc-openshift-router
  namespace: @@my_namespace@@
  labels:
    app: qsc-openshift-router
#    router: qsc-openshift-router
    ingresscontroller.operator.openshift.io/owning-ingresscontroller: default
  annotations:
    service.kubernetes.io/ibm-load-balancer-cloud-provider-ip-type: public
#    service.kubernetes.io/ibm-load-balancer-cloud-provider-ip-type: private
  finalizers:
  - service.kubernetes.io/load-balancer-cleanup
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  - name: https
    port: 443
    protocol: TCP
    targetPort: https
  type: LoadBalancer
  externalTrafficPolicy: Cluster
  sessionAffinity: None
  selector:
    ingresscontroller.operator.openshift.io/deployment-ingresscontroller: qsc-openshift-router
#    ingresscontroller.operator.openshift.io/deployment-ingresscontroller: default
#    router: my-qsc-openshift-router
